--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,5 +12,9 @@
     "enterYourPassword":"رمز عبور را وارد کنید",
     "password":"رمز عبور",
     "loginWithOtpCode":"ورود با رمز یکبار مصرف",
-    "forgetPassword":"فراموشی رمز عبور"
+    "forgetPassword":"فراموشی رمز عبور",
+    "otpCode":"کد تایید ",
+    "sendOtpToNumber":"کد تایید برای شماره *number* پیامک شد",
+    "timerAgo":"مانده تا دریافت مجدد کد"
+
 }
