add register and forget password

--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -26,6 +26,12 @@
     "addMember":"افزودن اعضا",
     "editGroupName":"ویرایش نام گروه",
     "title":"عنوان",
-            "save":"ذخیره"
+            "save":"ذخیره",
+    "addLamps":"افزودن لامپ",
+    "scan":"اسکن",
+    "cancel":"انصراف",
+    "beDelete":"حذف کردن",
+    "renameGroup":"ویرایش نام گروه"
+
 
 }
