add group and lamp

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,36 +1,47 @@
 {
-    "helloWorld": "Hello World!",
- "registerOrLogin":"ورود / ثبت‌نام",
-    "descRegisterOrLogin":"سلام!\nلطفا شماره موبایل یا ایمیل خود را وارد کنید",
-    "phone":"شماره تماس",
-    "login":"ورود",
-    "rol1":"ورود شما به معنای",
-    "rol2":" پذیرش شرایط",
-    "rol3":" قوانین",
-    "rol4":" حریم‌خصوصی",
-    "rol5":" است",
-    "enterYourPassword":"رمز عبور را وارد کنید",
-    "password":"رمز عبور",
-    "loginWithOtpCode":"ورود با رمز یکبار مصرف",
-    "forgetPassword":"فراموشی رمز عبور",
-    "otpCode":"کد تایید ",
-    "sendOtpToNumber":"کد تایید برای شماره *number* پیامک شد",
-    "timerAgo":"مانده تا دریافت مجدد کد",
-    "groupsList":"لیست گروه‌ها",
-    "settings":"تنظیمات",
-    "contrast":"کنتراست",
-    "coloring":"رنگبندی",
-    "yellowAndWhite":"زرد و سفید",
-    "lampList":"لیست لامپ",
-    "informationData":"اطلاعات آماری",
-    "addMember":"افزودن اعضا",
-    "editGroupName":"ویرایش نام گروه",
-    "title":"عنوان",
-    "save":"ذخیره",
-    "addLamps":"افزودن لامپ",
-    "scan":"اسکن",
-    "cancel":"انصراف",
-    "beDelete":"حذف کردن",
-    "renameGroup":"ویرایش نام گروه"
-
+  "helloWorld": "Hello World!",
+  "registerOrLogin": "ورود / ثبت‌نام",
+  "descRegisterOrLogin": "سلام!\nلطفا شماره موبایل یا ایمیل خود را وارد کنید",
+  "phone": "شماره تماس",
+  "login": "ورود",
+  "rol1": "ورود شما به معنای",
+  "rol2": " پذیرش شرایط",
+  "rol3": " قوانین",
+  "rol4": " حریم‌خصوصی",
+  "rol5": " است",
+  "enterYourPassword": "رمز عبور را وارد کنید",
+  "password": "رمز عبور",
+  "loginWithOtpCode": "ورود با رمز یکبار مصرف",
+  "forgetPassword": "فراموشی رمز عبور",
+  "otpCode": "کد تایید ",
+  "sendOtpToNumber": "کد تایید برای شماره *number* پیامک شد",
+  "timerAgo": "مانده تا دریافت مجدد کد",
+  "groupsList": "لیست گروه‌ها",
+  "settings": "تنظیمات",
+  "contrast": "کنتراست",
+  "coloring": "رنگبندی",
+  "yellowAndWhite": "زرد و سفید",
+  "lampList": "لیست لامپ",
+  "informationData": "اطلاعات آماری",
+  "addMember": "افزودن اعضا",
+  "editGroupName": "ویرایش نام گروه",
+  "title": "عنوان",
+  "save": "ذخیره",
+  "addLamps": "افزودن لامپ",
+  "scan": "اسکن",
+  "cancel": "انصراف",
+  "beDelete": "حذف کردن",
+  "renameGroup": "ویرایش نام گروه",
+  "addYourGroup": "گروه خود را اضافه کنید...",
+  "on": "روشن",
+  "off": "خاموش",
+  "addGroup": "افزودن گروه",
+  "lamp": "{value} لامپ",
+  "@lamp": {
+    "placeholders": {
+      "value": {
+        "type": "String"
+      }
+    }
+  }
 }
