--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -44,5 +44,19 @@
       }
     }
   },
-  "desc": "توضیحات"
+  "desc": "توضیحات",
+  "planning": "برنامه ریزی",
+  "select": "انتخاب کنید {value} ",
+  "@select": {
+    "placeholders": {
+      "value": {
+        "type": "String"
+      }
+    }
+  },
+  "selectDate": "انتخاب تاریخ",
+  "startDate": "ساعت شروع",
+  "finishDate": "ساعت پایان",
+  "again": "تکرار",
+  "selectDate": "ساعت را انتخاب کنید"
 }
