add internet box and delete group and add group

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -82,5 +82,8 @@
   "blue": "بلوتوث",
   "internet": "اینترنت",
   "logoutTitle": "حذف کاربر فرناز کشتکارباقری",
-  "logoutDesc": "آیا از حذف کاربر اطمینان دارین؟"
+  "logoutDesc": "آیا از حذف کاربر اطمینان دارین؟",
+  "name": "نام",
+  "defaultText": "متن پیش فرض",
+  "addInternetLamp": "افزودن لامپ اینترنتی"
 }
