add invite group

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -113,5 +113,6 @@
   "message": "پیام",
   "emptyScheduleMessage": "میتوانید برای لامپ ها برنامه ریزی زمانی داشته باشید",
   "addSchedule": "افزودن برنامه زمانی",
-  "selectYourConnection": "نوع اتصال خودرا وارد کنید"
+  "selectYourConnection": "نوع اتصال خودرا وارد کنید",
+  "lightSetting": "تنضیمات روشنایی"
 }
