add multi language

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,42 +1,42 @@
 {
   "helloWorld": "Hello World!",
-  "registerOrLogin": "ورود / ثبت‌نام",
-  "descRegisterOrLogin": "سلام!\nلطفا شماره موبایل یا ایمیل خود را وارد کنید",
-  "phone": "شماره تماس",
-  "login": "ورود",
-  "rol1": "ورود شما به معنای",
-  "rol2": " پذیرش شرایط",
-  "rol3": " قوانین",
-  "rol4": " حریم‌خصوصی",
-  "rol5": " است",
-  "enterYourPassword": "رمز عبور را وارد کنید",
-  "password": "رمز عبور",
-  "loginWithOtpCode": "ورود با رمز یکبار مصرف",
-  "forgetPassword": "فراموشی رمز عبور",
-  "otpCode": "کد تایید ",
-  "sendOtpToNumber": "کد تایید برای شماره *number* پیامک شد",
-  "timerAgo": "مانده تا دریافت مجدد کد",
-  "groupsList": "لیست گروه‌ها",
-  "settings": "تنظیمات",
-  "contrast": "کنتراست",
-  "coloring": "رنگبندی",
-  "yellowAndWhite": "زرد و سفید",
-  "lampList": "لیست لامپ",
-  "informationData": "اطلاعات آماری",
-  "addMember": "افزودن اعضا",
-  "editGroupName": "ویرایش نام گروه",
-  "title": "عنوان",
-  "save": "ذخیره",
-  "addLamps": "افزودن لامپ",
-  "scan": "اسکن",
-  "cancel": "انصراف",
-  "beDelete": "حذف کردن",
-  "renameGroup": "ویرایش نام گروه",
-  "addYourGroup": "گروه خود را اضافه کنید...",
-  "on": "روشن",
-  "off": "خاموش",
-  "addGroup": "افزودن گروه",
-  "lamp": "{value} لامپ",
+  "registerOrLogin": "Login / Register",
+  "descRegisterOrLogin": "Hello!\nPlease enter your mobile number or email",
+  "phone": "Phone Number",
+  "login": "Login",
+  "rol1": "Your login implies acceptance of the terms",
+  "rol2": " and conditions",
+  "rol3": " and privacy policies",
+  "rol4": "",
+  "rol5": "",
+  "enterYourPassword": "Enter your password",
+  "password": "Password",
+  "loginWithOtpCode": "Login with OTP code",
+  "forgetPassword": "Forgot Password",
+  "otpCode": "Verification Code",
+  "sendOtpToNumber": "Verification code sent to number *number*",
+  "timerAgo": "Time left to receive the code",
+  "groupsList": "Group List",
+  "settings": "Settings",
+  "contrast": "Contrast",
+  "coloring": "Coloring",
+  "yellowAndWhite": "Yellow and White",
+  "lampList": "Lamp List",
+  "informationData": "Statistical Information",
+  "addMember": "Add Members",
+  "editGroupName": "Edit Group Name",
+  "title": "Title",
+  "save": "Save",
+  "addLamps": "Add Lamps",
+  "scan": "Scan",
+  "cancel": "Cancel",
+  "beDelete": "Delete",
+  "renameGroup": "Edit Group Name",
+  "addYourGroup": "Add your group...",
+  "on": "On",
+  "off": "Off",
+  "addGroup": "Add Group",
+  "lamp": "{value} Lamp",
   "@lamp": {
     "placeholders": {
       "value": {
@@ -44,9 +44,9 @@
       }
     }
   },
-  "desc": "توضیحات",
-  "planning": "برنامه ریزی",
-  "select": "انتخاب کنید {value} ",
+  "desc": "Description",
+  "planning": "Planning",
+  "select": "Select {value}",
   "@select": {
     "placeholders": {
       "value": {
@@ -54,39 +54,39 @@
       }
     }
   },
-  "selectDate": "انتخاب تاریخ",
-  "again": "تکرار",
-  "member": "اعضا",
-  "changePassword": "تغییر رمز عبور",
-  "changeLanguage": "تغییر زبان",
-  "selectHour": "ساعت را انتخاب کنید",
-  "logout": "خروج از حساب کاربری",
-  "profile": "پروفایل",
-  "selectYourLanguage": "انتخاب زبان مورد نظر",
+  "selectDate": "Select Date",
+  "again": "Repeat",
+  "selectHour": "Select Hour",
+  "member": "Members",
+  "changePassword": "Change Password",
+  "changeLanguage": "Change Language",
+  "logout": "Logout",
+  "profile": "Profile",
+  "selectYourLanguage": "Select Your Language",
   "english": "English",
-  "persian": "فارسی",
-  "currentPassword": "رمز عبور فعلی",
-  "newPassword": "رمز عبور جدید",
-  "myMember": "اعضای من",
-  "requestList": "لیست درخواست\u200Cها",
-  "acceptRequest": "قبول درخواست",
-  "delete": "حذف",
-  "request": "درخواست",
-  "email": "ایمیل",
-  "firstName": "نام",
-  "lastName": "نام خانوادگی",
-  "internetLamp": "لامپ اینترنتی",
-  "connectionType": "نوع اتصال",
-  "blue": "بلوتوث",
-  "internet": "اینترنت",
-  "logoutDesc": "آیا از حذف کاربر اطمینان دارین؟",
-  "name": "نام",
-  "defaultText": "متن پیش فرض",
-  "addInternetLamp": "افزودن لامپ اینترنتی",
-  "addYourLamp": "لامپ خود را اضافه کنید...",
-  "selectButton": "انتخاب",
-  "unselectButton": "لغو انتخاب",
-  "numberSelectLamp": "{value} تا لامپ انتخاب شده",
+  "persian": "Persian",
+  "currentPassword": "Current Password",
+  "newPassword": "New Password",
+  "myMember": "My Members",
+  "requestList": "Request List",
+  "acceptRequest": "Accept Request",
+  "delete": "Delete",
+  "request": "Request",
+  "email": "Email",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "internetLamp": "Internet Lamp",
+  "connectionType": "Connection Type",
+  "blue": "Bluetooth",
+  "internet": "Internet",
+  "logoutDesc": "Are you sure you want to delete the user?",
+  "name": "Name",
+  "defaultText": "Default Text",
+  "addInternetLamp": "Add Internet Lamp",
+  "addYourLamp": "Add your lamp...",
+  "selectButton": "Select",
+  "unselectButton": "Deselect",
+  "numberSelectLamp": "Select {value} Lamps",
   "@numberSelectLamp": {
     "placeholders": {
       "value": {
@@ -94,8 +94,8 @@
       }
     }
   },
-  "editLampName": "ویرایش نام لامپ",
-  "logoutTitle": "حذف کاربر {value}",
+  "editLampName": "Edit Lamp Name",
+  "logoutTitle": "Delete User {value}",
   "@logoutTitle": {
     "placeholders": {
       "value": {
@@ -103,16 +103,19 @@
       }
     }
   },
-  "startDate": "تاریخ شروع",
-  "finishDate": "تاریخ پایان",
-  "startHour": "ساعت شروع",
-  "finishHour": "ساعت پایان",
-  "show": "نمایش",
-  "exportType": "نوع خروجی",
-  "selectGroup": "انتخاب گروه",
-  "message": "پیام",
-  "emptyScheduleMessage": "میتوانید برای لامپ ها برنامه ریزی زمانی داشته باشید",
-  "addSchedule": "افزودن برنامه زمانی",
-  "selectYourConnection": "نوع اتصال خودرا وارد کنید",
-  "lightSetting": "تنضیمات روشنایی"
+  "startHour": "Start Hour",
+  "finishHour": "Finish Hour",
+  "startDate": "Start Date",
+  "finishDate": "Finish Date",
+  "show": "Show",
+  "exportType": "Export Type",
+  "selectGroup": "Select Group",
+  "message": "Message",
+  "emptyScheduleMessage": "You can schedule time for lamps",
+  "addSchedule": "Add Schedule",
+  "selectYourConnection": "Enter your connection type",
+  "state1": "Power Consumption (Watt)",
+  "state2": "Temperature and Humidity",
+  "state3": "Motion Sensor",
+  "state4": "Light Sensor"
 }
