--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -117,5 +117,7 @@
   "state1": "مصرف بر حسب وات",
   "state2": "دما رطوبت",
   "state3": "سنسور حرکتی",
-  "state4": "سنسور نور"
+  "state4": "سنسور نور",
+  "lightSetting": "تنظیمات روشنایی",
+  "lightSettingMessage": "لطفا تنظیمات روشنایی را انتخاب کنید"
 }
