--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -119,14 +119,14 @@
   "state3": "Motion Sensor",
   "state4": "Light Sensor",
   "lightSetting": "Light Setting",
-  "lightSettingMessage": "لطفا تنظیمات روشنایی را انتخاب کنید",
-  "addNewConnection": "اضافه کردن اتصال جدید",
-  "connected": "متصل شد",
-  "disconnected": "متصل نیست",
-  "stopScan": "توقف جستوجو",
-  "done": "تمام",
-  "deleteSchedule": "حذف برنامه ریزی",
-  "editInformation": "ویرایش اطلاعات",
-  "exit": "خروج",
-  "endHour": "ساعت پایان"
+  "lightSettingMessage": "Please select the lighting settings",
+  "addNewConnection": "Add new connection",
+  "connected": "Connected",
+  "disconnected": "Disconnected",
+  "stopScan": "Stop scanning",
+  "done": "Done",
+  "deleteSchedule": "Delete schedule",
+  "editInformation": "Edit information",
+  "exit": "Exit",
+  "endHour": "End time"
 }
