--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -18,7 +18,7 @@
   "timerAgo": "مانده تا دریافت مجدد کد",
   "groupsList": "لیست گروه‌ها",
   "settings": "تنظیمات",
-  "contrast": "کنتراست",
+  "contrast": "شدت نور",
   "coloring": "رنگبندی",
   "yellowAndWhite": "زرد و سفید",
   "lampList": "لیست لامپ",
