--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -129,5 +129,9 @@
   "deleteGroup": "حذف گروه",
   "speedLight": "سرعت تغییر نور",
   "selectColor": "انتخاب رنگ",
-  "done": "تمام"
+  "done": "تمام",
+  "needInternetError": "برای این فرایند نیاز اینترنت میباشد لطفا روش اتصال را به اینترنت تغییر دهید",
+  "bluetoothIsOff": "بلوتوث خاموش است",
+  "turnOn": "روشن کردن",
+  "errorNotSelected": "لطفا یک مورد را انتخاب کنید"
 }
