--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -133,5 +133,6 @@
   "needInternetError": "برای این فرایند نیاز اینترنت میباشد لطفا روش اتصال را به اینترنت تغییر دهید",
   "bluetoothIsOff": "بلوتوث خاموش است",
   "turnOn": "روشن کردن",
-  "errorNotSelected": "لطفا یک مورد را انتخاب کنید"
+  "errorNotSelected": "لطفا یک مورد را انتخاب کنید",
+  "errorInformation": "اطلاعات رو به درستی وارد کنید"
 }
