--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -135,5 +135,20 @@
   "turnOn": "روشن کردن",
   "errorNotSelected": "لطفا یک مورد را انتخاب کنید",
   "errorInformation": "اطلاعات رو به درستی وارد کنید",
-  "notValidBarcode": "بارکد معتبر نیست"
+  "notValidBarcode": "بارکد معتبر نیست",
+  "resend": "ارسال مجدد",
+  "error": "خطا",
+  "error400": "درخواست نامعتبر یا ناقص است.",
+  "error401": "عدم احراز هویت یا اجازه دسترسی رد شد.",
+  "error403": " دسترسی به منبع ممنوع است.",
+  "error404": "منبع مورد نظر پیدا نشد.",
+  "error405": "متد HTTP مجاز نیست.",
+  "error500": "خطای داخلی سرور.",
+  "error409": "درخواست با وضعیت فعلی منابع در تداخل است.",
+  "error422": "داده\u200Cهای ارسال شده قابل پردازش نیستند.",
+  "error202": "درخواست پذیرفته شده است، اما هنوز انجام نشده است.",
+  "error408": "زمان انتظار برای پاسخ به درخواست به پایان رسیده است.",
+  "error429": "تعداد درخواست\u200Cها بیش از حد مجاز است.",
+  "checkPhone": "بررسی شماره تلفن",
+  "errorPhoneNumber": "لطفا شماره تلفن را به درستی وارد کنید"
 }
