--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,7 @@
 {
   "helloWorld": "Hello World!",
   "registerOrLogin": "Login / Register",
-  "descRegisterOrLogin": "Hello!\nPlease enter your mobile number or email",
+  "descRegisterOrLogin": "Hello!\nPlease enter your mobile number",
   "phone": "Phone Number",
   "login": "Login",
   "rol1": "Your login implies acceptance of the terms",
@@ -95,7 +95,7 @@
     }
   },
   "editLampName": "Edit Lamp Name",
-  "logoutTitle": "exit User {value}",
+  "logoutTitle": "Exit User {value}",
   "@logoutTitle": {
     "placeholders": {
       "value": {
@@ -114,10 +114,11 @@
   "emptyScheduleMessage": "You can schedule time for lamps",
   "addSchedule": "Add Schedule",
   "selectYourConnection": "Enter your connection type",
-  "state1": "Power Consumption (Watt)",
-  "state2": "Temperature and Humidity",
-  "state3": "Motion Sensor",
-  "state4": "Light Sensor",
+  "state_power": "Power Consumption (Watt)",
+  "state_temperature": "Temperature Sensor",
+  "state_humidity": "Humidity Sensor",
+  "state_light": "Light Sensor",
+  "state_air_quality": "Air Quality Sensor",
   "lightSetting": "Light Setting",
   "lightSettingMessage": "Please select the lighting settings",
   "addNewConnection": "Add new connection",
@@ -154,5 +155,29 @@
   "error429": "The number of requests exceeds the allowed limit.",
   "resend": "Re-send",
   "checkPhone": "check phone number",
-  "errorPhoneNumber": "Enter the Phone Number correctly"
+  "errorPhoneNumber": "Enter the Phone Number correctly",
+  "minimum8Characters": "Minimum 8 characters",
+  "minimum1Uppercase": "Minimum 1 letter Uppercase (A-Z)",
+  "minimum1Lowercase": "Minimum 1 letter Lowercase (a-z)",
+  "minimum1Number": "Minimum 1 Number (0-9)",
+  "success": "Success",
+  "no_name": "No name",
+  "deleteRequestMessage": "Are you sure to delete this request?",
+  "deleteRequest": "Delete request",
+  "year": "Year",
+  "month": "Month",
+  "day": "Day",
+  "selectInternetBox": "Select Internet Box",
+  "dateStart": "start date",
+  "dateEnd": "to date",
+  "displayAllAvailableData": "Display all available data",
+  "sunday": "sun",
+  "monday": "mon",
+  "tuesday": "tue",
+  "wednesday": "wed",
+  "thursday": "thu",
+  "friday": "fri",
+  "saturday": "sat",
+  "look_for_the_code_on_the_device": "Look for the code on the device or its packaging and insert it into the frame",
+  "use_the_activation_code": "Use the activation code"
 }
