--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,7 +1,7 @@
 {
   "helloWorld": "سلام دنیا!",
   "registerOrLogin": "ورود / ثبت‌نام",
-  "descRegisterOrLogin": "سلام!\nلطفا شماره موبایل یا ایمیل خود را وارد کنید",
+  "descRegisterOrLogin": "سلام!\nلطفا شماره موبایل خود را وارد کنید",
   "phone": "شماره تماس",
   "login": "ورود",
   "rol1": "ورود شما به معنای",
@@ -114,10 +114,11 @@
   "emptyScheduleMessage": "میتوانید برای لامپ ها برنامه ریزی زمانی داشته باشید",
   "addSchedule": "افزودن برنامه زمانی",
   "selectYourConnection": "نوع اتصال خودرا وارد کنید",
-  "state1": "مصرف بر حسب وات",
-  "state2": "دما رطوبت",
-  "state3": "سنسور حرکتی",
-  "state4": "سنسور نور",
+  "state_power": "مصرف بر حسب وات",
+  "state_light": "میزان روشنایی",
+  "state_temperature": "میزان دما",
+  "state_humidity": "میزان رطوبت",
+  "state_air_quality": "کیفیت هوا",
   "lightSetting": "تنظیمات روشنایی",
   "lightSettingMessage": "لطفا تنظیمات روشنایی را انتخاب کنید",
   "deleteSchedule": "حذف برنامه ریزی",
@@ -150,5 +151,29 @@
   "error408": "زمان انتظار برای پاسخ به درخواست به پایان رسیده است.",
   "error429": "تعداد درخواست\u200Cها بیش از حد مجاز است.",
   "checkPhone": "بررسی شماره تلفن",
-  "errorPhoneNumber": "لطفا شماره تلفن را به درستی وارد کنید"
+  "errorPhoneNumber": "لطفا شماره تلفن را به درستی وارد کنید",
+  "minimum8Characters": "حداقل ۸ حرف",
+  "minimum1Uppercase": "حداقل ۱ حرف بزرگ (A-Z)",
+  "minimum1Lowercase": "حداقل ۱ حرف کوچک (a-z)",
+  "minimum1Number": "حداقل ۱ عدد (۰-۹)",
+  "success": "موفق",
+  "no_name": "بدون نام",
+  "deleteRequestMessage": "آیا از حذف این درخواست اطمینان دارین؟",
+  "deleteRequest": "حذف درخواست",
+  "year": "سال",
+  "month": "ماه",
+  "day": "روز",
+  "selectInternetBox": "انتخاب باکس اینترنتی",
+  "dateStart": "شروع تاریخ",
+  "dateEnd": "تا تاریخ",
+  "displayAllAvailableData": "نمایش تمام داده های موجود",
+  "sunday": "ی",
+  "monday": "د",
+  "tuesday": "س",
+  "wednesday": "چ",
+  "thursday": "پ",
+  "friday": "ج",
+  "saturday": "ش",
+  "look_for_the_code_on_the_device": "به دنبال کد روی دستگاه یا بسته بندی آن بگردید و آن را در قاب قرار دهید",
+  "use_the_activation_code": "از کد راه اندازی استفاده کنید"
 }
