--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -120,6 +120,10 @@
   "state4": "سنسور نور",
   "lightSetting": "تنظیمات روشنایی",
   "lightSettingMessage": "لطفا تنظیمات روشنایی را انتخاب کنید",
+  "addNewConnection": "افزودن اتصال جدید",
+  "connected": "متصل",
+  "disconnected": "غیر متصل",
+  "stopScan": "توقف فعالیت",
   "deleteSchedule": "حذف برنامه ریزی",
   "editInformation": "ویرایش اطلاعات",
   "exit": "خروج",
