--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -188,5 +188,7 @@
   "at_least_1_number": "حداقل ۱ عدد (۰-۹)",
   "second": "ثانیه",
   "result" : "نتیجه",
-  "skip" : "رد کردن"
+  "skip" : "رد کردن",
+  "loading": "در حال بارگذاری ..."
+
 }
