--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -188,6 +188,7 @@
   "at_least_1_number": "At least 1 number (0-9)",
   "second": "sec",
   "result": "Result",
-  "skip" : "Skip"
+  "skip" : "Skip",
+  "loading": "loading ..."
 
 }
